--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <p class="lead mb-5">I am currently a freshman pursuing his interests in various Web Technology <br />  “Once a new technology rolls over you, if you're not part of the steamroller, you're part of the road.” <br />Always be productive! </p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/banty-manjhi/">
+          <a href="https://www.instagram.com/not_me.7111/">
             <i class="fab fa-instagram"></i>
           </a>
           <!-- <a href="https://github.com/banty306">
